[metadata]
name = ycm_cmake_modules
description = Extra CMake Modules for YARP and friends.
long_description = file: README.md; charset=UTF-8
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = BSD
platforms = any
url = http://robotology.github.io/ycm

project_urls =
    Tracker = https://github.com/robotology/ycm/issues
    Documentation = http://robotology.github.io/ycm
    Source = https://github.com/robotology/ycm

keywords =
    cmake
    cmake-modules
    cmake-resources
    build-tool
    build-system
    superbuild
    yarp
    robotics

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Framework :: Robot Framework
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: System :: Archiving :: Packaging
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
python_requires = >=3.0
